Mobile nav toggle

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,9 @@
       <div class="wrapper">
         <nav class="navigation">
           <ul class="navigation__list container">
+            <li class="navigation__list-item navigation__list-item-mobile" id="menu">
+              <a href="#">Menu</a>
+            </li>
             <li class="navigation__list-item">
               <a href="#story">Our Story</a>
             </li>
