Add My calendar plugin

--- a/app/index.html
+++ b/app/index.html
@@ -16,9 +16,13 @@
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
+        <link href='http://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Raleway:100,400' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
         <script src="bower_components/modernizr/modernizr.js"></script>
+        <!-- AddThisEvent -->
+        <script type="text/javascript" src="https://addthisevent.com/libs/1.6.0/ate.min.js"></script>
 
     </head>
     <body>
@@ -48,7 +52,23 @@
         </nav>
         <div class="content">
           <section class="container container-fullscreen intro" id="top">
-            <h1>Taylor &amp; Richard</h1>
+            <div class="container__content">
+              <h1>taylor &amp; richard</h1>
+              <p>March 12th, 2016</p>
+              <div title="Add to Calendar" class="addthisevent">
+                Add to Calendar
+                <span class="start">03/12/2016 04:30 PM</span>
+                <span class="end">03/12/2016 11:00 PM</span>
+                <span class="timezone">America/New_York</span>
+                <span class="title">Taylor and Richard's Wedding</span>
+                <span class="description">Description of the event<br>Example of a new line</span>
+                <span class="location">Location of the event</span>
+                <span class="organizer">Organizer</span>
+                <span class="organizer_email">Organizer e-mail</span>
+                <span class="all_day_event">false</span>
+                <span class="date_format">MM/DD/YYYY</span>
+            </div>
+            </div>
           </section>
           <section class="container container-fullscreen story" id="story">
             <div class="container__content">
@@ -102,6 +122,13 @@
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X');ga('send','pageview');
+        </script>
+
+        <!-- AddThisEvent Settings -->
+        <script type="text/javascript">
+        addthisevent.settings({
+            css: true,
+        });
         </script>
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
