My Calendar styles

--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
         <div class="content">
           <section class="container container-fullscreen intro" id="top">
             <div class="container__content">
-              <h1>taylor &amp; richard</h1>
+              <h1>taylor <span class="amp">&amp;</span> richard</h1>
               <p>March 12th, 2016</p>
               <div title="Add to Calendar" class="addthisevent">
                 Add to Calendar
@@ -127,7 +127,7 @@
         <!-- AddThisEvent Settings -->
         <script type="text/javascript">
         addthisevent.settings({
-            css: true,
+            css: false,
         });
         </script>
 
