Add new colors and svgs

--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
         <div class="content">
           <section class="container container-fullscreen intro" id="top">
             <div class="container__content">
-              <img src="images/flourish_center.svg" alt="Test" class="intro_icon">
+              <img src="images/flourish_center.svg" alt="Icon" class="intro_icon">
               <h1>taylor <span class="amp">and</span> richard</h1>
               <div class="detail">
                 <img src="images/arrow.svg" alt="">
@@ -86,19 +86,26 @@
           <section class="container container-fullscreen story" id="story">
             <div class="container__content">
               <h2 class="headline">Our Story</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore vero doloribus adipisci recusandae. Maiores quidem animi, quis nemo voluptates enim odio porro repellendus voluptatem, commodi aspernatur asperiores! Maiores, quidem, repudiandae!</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore vero doloribus adipisci recusandae. Maiores quidem animi, quis nemo voluptates enim odio porro repellendus voluptatem, commodi aspernatur asperiores! Maiores, quidem, repudiandae!</p>
+              <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
+              <p>This story begins in 2011 when Taylor and Richard met in a typography class at Auburn University. They soon discovered they each had family in the small town of LaGrange, where Richard grew up. Once Taylor asked her mother about the Daniel family, it only took a couple of weeks for (unfounded) rumors of their relationship to begin circulating in LaGrange.</p>
+              <p>Upon learning, much to their horror, that they were LaGrange’s next hot thing, Taylor and Richard developed an awkwardly flirtatious friendship. The seed had been planted. However, it wasn’t until the old 280 Boogie, a music festival in nearby Waverly, that any romantic gestures were exchanged (It’s still a hotly debated who held whom’s hand on that day).</p>
+              <p>Unfortunately, this event occurred no more than three weeks before Richard would depart for four-month excursion to the west coast to live in a remote canyon devoid of contact with the outside world, and almost as soon Taylor would be boarding a plane to Italy for several weeks of study (wine consumption). It seemed at the time that this hopeful yet fledgling relationship might be cut short by the untimely circumstances of each grand adventure. But, as you might have guessed, this departure would only conclude the opening chapter of their relationship.</p>
+              <p>Over the next several months, the two exchanged postcards, letters, small gifts, and the occasional phone call. They stalked one another on Facebook. Their friends suffered constant allusions to the “beautiful curly-headed girl back home” and the “I-don’t-know-what-we-are-or-when-he’s-coming-back guy.” Although the sparks continued to fly, the two secretly worried that the vast distance between them could jeopardize the the relationship. Nonchalant musings of Taylor visiting California suddenly turned to an impromptu plane ticket purchase the week before Taylor would return to Auburn for her final year of college.</p>
+              <p>Richard’s job in King’s Canyon included taking tourists on extensive canyoneering trips, and he decided that this would be the perfect way to impress Taylor during her visit. What Taylor lacked in basic coordination she made up for in endurance and sheer will power, and so it was decided that they would tackle the most difficult 12-hour trip together. The two spent an entire day navigating the perilous canyon, rapelling down massive waterfalls, swimming through rushing white water and climbing rugged rock faces. Seizing what presented itself as a prime opportunity, Richard asked Taylor to be his girlfriend as she began her final rappel down a cliff at the end of their journey. She saw no way out of the predicament and hastily agreed.</p>
+              <p>Taylor and Richard spent the next four years growing into young professionals, moving to Birmingham and eventually Atlanta, making new friends, adopting an adorable weiner dog, all the while falling more deeply in love with each other.</p>
             </div>
           </section>
           <section class="container container-fullscreen details" id="details">
             <div class="container__content">
               <h2 class="headline">Wedding Details</h2>
+              <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id earum, cumque deleniti recusandae fuga quod excepturi repudiandae doloremque. Est qui nulla modi placeat, officiis ipsum! Quis voluptatem reiciendis soluta, cum.</p>
             </div>
           </section>
           <section class="container container-fullscreen guests" id="guests">
             <div class="container__content">
               <h2 class="headline">Accomodations</h2>
+              <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ea amet voluptates obcaecati minima nostrum voluptatum error perspiciatis. Consequuntur eum cupiditate rem nemo. Ipsa voluptatem eius ipsam sed repudiandae, voluptas.</p>
             </div>
           </section>
