Add image background and response intro type styles

--- a/app/index.html
+++ b/app/index.html
@@ -84,7 +84,7 @@
             </div>
           </section>
           <section class="container container-fullscreen story" id="story">
-            <div class="container__content">
+            <div class="container__content container__enclosed">
               <h2 class="headline">Our Story</h2>
               <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
               <p>This story begins in 2011 when Taylor and Richard met in a typography class at Auburn University. They soon discovered they each had family in the small town of LaGrange, where Richard grew up. Once Taylor asked her mother about the Daniel family, it only took a couple of weeks for (unfounded) rumors of their relationship to begin circulating in LaGrange.</p>
@@ -104,7 +104,7 @@
             </div>
           </section>
           <section class="container container-fullscreen guests" id="guests">
-            <div class="container__content">
+            <div class="container__content container__enclosed">
               <h2 class="headline">Accomodations</h2>
               <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ea amet voluptates obcaecati minima nostrum voluptatum error perspiciatis. Consequuntur eum cupiditate rem nemo. Ipsa voluptatem eius ipsam sed repudiandae, voluptas.</p>
