Add coming soon sections

--- a/app/index.html
+++ b/app/index.html
@@ -99,15 +99,27 @@
           <section class="container container-fullscreen details" id="details">
             <div class="container__content">
               <h2 class="headline">Wedding Details</h2>
-              <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id earum, cumque deleniti recusandae fuga quod excepturi repudiandae doloremque. Est qui nulla modi placeat, officiis ipsum! Quis voluptatem reiciendis soluta, cum.</p>
+              <div class="coming-soon">
+                  <img src="images/flourish_center.svg" alt="Icon">
+                  <img src="images/flourish_under.svg" alt="Icon">
+                  <h3>Coming Soon</h3>
+                  <img src="images/flourish_under.svg" alt="Icon">
+              </div>
+              <!-- <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id earum, cumque deleniti recusandae fuga quod excepturi repudiandae doloremque. Est qui nulla modi placeat, officiis ipsum! Quis voluptatem reiciendis soluta, cum.</p> -->
             </div>
           </section>
           <section class="container container-fullscreen guests" id="guests">
             <div class="container__content container__enclosed">
               <h2 class="headline">Accomodations</h2>
-              <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ea amet voluptates obcaecati minima nostrum voluptatum error perspiciatis. Consequuntur eum cupiditate rem nemo. Ipsa voluptatem eius ipsam sed repudiandae, voluptas.</p>
+              <div class="coming-soon">
+                  <img src="images/flourish_center.svg" alt="Icon">
+                  <img src="images/flourish_under.svg" alt="Icon">
+                  <h3>Coming Soon</h3>
+                  <img src="images/flourish_under.svg" alt="Icon">
+              </div>
+              <!-- <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ea amet voluptates obcaecati minima nostrum voluptatum error perspiciatis. Consequuntur eum cupiditate rem nemo. Ipsa voluptatem eius ipsam sed repudiandae, voluptas.</p> -->
             </div>
           </section>
           <section class="container container-fullscreen registry" id="registry">
@@ -115,17 +127,17 @@
               <h2 class="headline">Registry</h2>
               <div class="registry-options">
                 <div class="registry-options__item">
-                  <a href="http://www.crateandbarrel.com/">
+                  <a href="http://www.crateandbarrel.com/gift-registry/taylor-evans-and-richard-daniel-iii/r5399898">
                     <img src="images/cb.svg" alt="Crate and Barrell">
                   </a>
                 </div>
                 <div class="registry-options__item">
-                  <a href="http://www.bedbathandbeyond.com/">
+                  <a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?pwsToken=&eventType=Wedding&registryId=542598524&pwsurl=">
                     <img src="images/bbb.svg" alt="Bed Bath and Beyond">
                   </a>
                 </div>
                 <div class="registry-options__item">
-                  <a href="http://www.williams-sonoma.com/">
+                  <a href="https://secure.williams-sonoma.com/registry/j5zkk692cl/registry-list.html">
                     <img src="images/ws.svg" alt="Williams Sonoma">
                   </a>
                 </div>
@@ -133,11 +145,10 @@
             </div>
           </section>
           <footer class="container container-fullscreen">
-            <h2>Thanks!</h2>
+            <div class="container__content container__enclosed">
+                <h2>Thanks!</h2>
+            </div>
           </footer>
-        </div>
-        <div class="top">
-          <a href="#top">Top</a>
         </div>
       </div>
 
