Add new headline font

--- a/app/index.html
+++ b/app/index.html
@@ -57,16 +57,12 @@
           <section class="container container-fullscreen intro" id="top">
             <div class="container__content">
               <img src="images/flourish_center.svg" alt="Icon" class="intro_icon">
-              <h1>taylor <span class="amp">and</span> richard</h1>
+              <h1>Taylor <span class="amp">&amp;</span> Richard</h1>
               <div class="detail">
-                <img src="images/arrow.svg" alt="">
                 <p>are getting married</p>
-                <img src="images/arrow.svg" alt="">
               </div>
               <div class="date">
-                  <p>March</p>
-                  <h3>12</h3>
-                  <p>2016</p>
+                  <p>03 | 12 | 16</p>
               </div>
               <div title="Add to Calendar" class="addthisevent">
                 Add to Calendar
@@ -100,10 +96,7 @@
             <div class="container__content">
               <h2 class="headline">Wedding Details</h2>
               <div class="coming-soon">
-                  <img src="images/flourish_center.svg" alt="Icon">
-                  <img src="images/flourish_under.svg" alt="Icon">
                   <h3>Coming Soon</h3>
-                  <img src="images/flourish_under.svg" alt="Icon">
               </div>
               <!-- <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id earum, cumque deleniti recusandae fuga quod excepturi repudiandae doloremque. Est qui nulla modi placeat, officiis ipsum! Quis voluptatem reiciendis soluta, cum.</p> -->
@@ -113,10 +106,7 @@
             <div class="container__content container__enclosed">
               <h2 class="headline">Accomodations</h2>
               <div class="coming-soon">
-                  <img src="images/flourish_center.svg" alt="Icon">
-                  <img src="images/flourish_under.svg" alt="Icon">
                   <h3>Coming Soon</h3>
-                  <img src="images/flourish_under.svg" alt="Icon">
               </div>
               <!-- <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ea amet voluptates obcaecati minima nostrum voluptatum error perspiciatis. Consequuntur eum cupiditate rem nemo. Ipsa voluptatem eius ipsam sed repudiandae, voluptas.</p> -->
