Add accomodations section

--- a/app/index.html
+++ b/app/index.html
@@ -95,26 +95,39 @@
           <section class="container container-fullscreen details" id="details">
             <div class="container__content">
               <h2 class="headline">Wedding Details</h2>
+              <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
               <div class="coming-soon">
                   <h3>Coming Soon</h3>
               </div>
-              <!-- <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
+              <!--
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id earum, cumque deleniti recusandae fuga quod excepturi repudiandae doloremque. Est qui nulla modi placeat, officiis ipsum! Quis voluptatem reiciendis soluta, cum.</p> -->
             </div>
           </section>
           <section class="container container-fullscreen guests" id="guests">
             <div class="container__content container__enclosed">
               <h2 class="headline">Accomodations</h2>
-              <div class="coming-soon">
-                  <h3>Coming Soon</h3>
+              <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
+              <div class="hotel">
+                  <section class="hotel__primary">
+                      <a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Evans/Daniels%20Wedding%5Eatlmn%60edwedwa%7Cedwedwb%7Cedwedwc%60105.00%60USD%60false%601%603/10/16%603/13/16%602/18/16&app=resvlink&stop_mobi=yes" class="hotel__image">
+                        <img src="images/courtyard.jpg" alt="">
+                      </a>
+                      <a class="hotel__cta" href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Evans/Daniels%20Wedding%5Eatlmn%60edwedwa%7Cedwedwb%7Cedwedwc%60105.00%60USD%60false%601%603/10/16%603/13/16%602/18/16&app=resvlink&stop_mobi=yes">Book Online</a>
+                      <a class="hotel__cta" href="tel:8003212211">Call to Book</a>
+                  </section>
+                  <aside class="hotel__details">
+                      <h3>Courtyard by Marriott Atlanta Midtown</h3>
+                      <p class="hotel__details-address">1132 Techwood Drive<br>Atlanta, GA  30318<br>1-800-321-2211</p>
+                      <p>Special Group Rate: $105/Night</p>
+                      <p>To receive group rate, please ask for Evans/Daniel Wedding and book prior to February 18, 2016.</p>
+                  </aside>
               </div>
-              <!-- <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ea amet voluptates obcaecati minima nostrum voluptatum error perspiciatis. Consequuntur eum cupiditate rem nemo. Ipsa voluptatem eius ipsam sed repudiandae, voluptas.</p> -->
             </div>
           </section>
           <section class="container container-fullscreen registry" id="registry">
             <div class="container__content">
               <h2 class="headline">Registry</h2>
+              <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
               <div class="registry-options">
                 <div class="registry-options__item">
                   <a href="http://www.crateandbarrel.com/gift-registry/taylor-evans-and-richard-daniel-iii/r5399898">
