--- a/app/index.html
+++ b/app/index.html
@@ -108,19 +108,17 @@
               <h2 class="headline">Accomodations</h2>
               <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
               <div class="hotel">
-                  <section class="hotel__primary">
-                      <a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Evans/Daniels%20Wedding%5Eatlmn%60edwedwa%7Cedwedwb%7Cedwedwc%60105.00%60USD%60false%601%603/10/16%603/13/16%602/18/16&app=resvlink&stop_mobi=yes" class="hotel__image">
-                        <img src="images/courtyard.jpg" alt="">
-                      </a>
-                      <a class="hotel__cta" href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Evans/Daniels%20Wedding%5Eatlmn%60edwedwa%7Cedwedwb%7Cedwedwc%60105.00%60USD%60false%601%603/10/16%603/13/16%602/18/16&app=resvlink&stop_mobi=yes">Book Online</a>
-                      <a class="hotel__cta" href="tel:8003212211">Call to Book</a>
-                  </section>
+                  <a class="hotel__image" href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Evans/Daniels%20Wedding%5Eatlmn%60edwedwa%7Cedwedwb%7Cedwedwc%60105.00%60USD%60false%601%603/10/16%603/13/16%602/18/16&app=resvlink&stop_mobi=yes">
+                    <img src="images/courtyard.jpg" alt="">
+                  </a>
                   <aside class="hotel__details">
                       <h3>Courtyard by Marriott Atlanta Midtown</h3>
                       <p class="hotel__details-address">1132 Techwood Drive<br>Atlanta, GA  30318<br>1-800-321-2211</p>
                       <p>Special Group Rate: $105/Night</p>
                       <p>To receive group rate, please ask for Evans/Daniel Wedding and book prior to February 18, 2016.</p>
                   </aside>
+                  <a class="hotel__cta" href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Evans/Daniels%20Wedding%5Eatlmn%60edwedwa%7Cedwedwb%7Cedwedwc%60105.00%60USD%60false%601%603/10/16%603/13/16%602/18/16&app=resvlink&stop_mobi=yes">Book Online</a>
+                  <a class="hotel__cta" href="tel:8003212211">Call Hotel</a>
               </div>
             </div>
           </section>
