--- a/app/index.html
+++ b/app/index.html
@@ -120,6 +120,20 @@
                   <a class="hotel__cta" href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Evans/Daniels%20Wedding%5Eatlmn%60edwedwa%7Cedwedwb%7Cedwedwc%60105.00%60USD%60false%601%603/10/16%603/13/16%602/18/16&app=resvlink&stop_mobi=yes">Book Online</a>
                   <a class="hotel__cta" href="tel:8003212211">Call Hotel</a>
               </div>
+              <img src="images/center-arrows.svg" alt="Icon" class="section_icon hotel__divider">
+              <div class="hotel">
+                  <a class="hotel__image" href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Evans/Daniels%20Wedding%5Eatlmn%60edwedwa%7Cedwedwb%7Cedwedwc%60105.00%60USD%60false%601%603/10/16%603/13/16%602/18/16&app=resvlink&stop_mobi=yes">
+                    <img src="images/loews.jpg" alt="">
+                  </a>
+                  <aside class="hotel__details">
+                      <h3>Loews Atlanta Hotel</h3>
+                      <p class="hotel__details-address">1065 Peachtree Street NE<br>Atlanta, GA 30309<br>1-404-745-5000</p>
+                      <p>Special Group Rate: $159/Night</p>
+                      <p>To receive group rate, please ask for Evans/Daniel Wedding and book prior to February 9, 2016.</p>
+                  </aside>
+                  <a class="hotel__cta" href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Evans/Daniels%20Wedding%5Eatlmn%60edwedwa%7Cedwedwb%7Cedwedwc%60105.00%60USD%60false%601%603/10/16%603/13/16%602/18/16&app=resvlink&stop_mobi=yes">Book Online</a>
+                  <a class="hotel__cta" href="tel:4047455000">Call Hotel</a>
+              </div>
             </div>
           </section>
           <section class="container container-fullscreen registry" id="registry">
@@ -147,7 +161,9 @@
           </section>
           <footer class="container container-fullscreen">
             <div class="container__content container__enclosed">
-                <h2>Thanks!</h2>
+                <img src="images/loews.jpg" alt="">
+                <p>We can't wait for you to celebrate with us!</p>
+                <img src="images/flourish_center.svg" alt="Icon" class="end_icon">
             </div>
           </footer>
         </div>
