--- a/app/index.html
+++ b/app/index.html
@@ -89,7 +89,7 @@
               <p>Over the next several months, the two exchanged postcards, letters, small gifts, and the occasional phone call. They stalked one another on Facebook. Their friends suffered constant allusions to the “beautiful curly-headed girl back home” and the “I-don’t-know-what-we-are-or-when-he’s-coming-back guy.” Although the sparks continued to fly, the two secretly worried that the vast distance between them could jeopardize the relationship. Nonchalant musings of Taylor visiting California suddenly turned to an impromptu plane ticket purchase the week before Taylor would return to Auburn for her final year of college.</p>
               <p>Richard’s job in King’s Canyon included taking tourists on extensive canyoneering trips, and he decided that this would be the perfect way to impress Taylor during her visit. What Taylor lacked in basic coordination she made up for in endurance and sheer will power, and so it was decided that they would tackle the most difficult 12-hour trip together. The two spent an entire day navigating the perilous canyon, rapelling down massive waterfalls, swimming through rushing white water and climbing rugged rock faces. Seizing what presented itself as a prime opportunity, Richard asked Taylor to be his girlfriend as she began her final rappel down a cliff at the end of their journey. She saw no way out of the predicament and hastily agreed.</p>
               <p>Taylor and Richard spent the next four years growing into young professionals, moving to Birmingham and eventually Atlanta, making new friends, adopting an adorable weiner dog, all the while falling more deeply in love with each other.</p>
-              <img src="images/flourish_center.svg" alt="Icon" class="end_icon">
+              <img src="images/flourish_center.svg" alt="Icon" class="end__icon">
             </div>
           </section>
           <section class="container container-fullscreen details" id="details">
@@ -122,7 +122,7 @@
               </div>
               <img src="images/center-arrows.svg" alt="Icon" class="section_icon hotel__divider">
               <div class="hotel">
-                  <a class="hotel__image" href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Evans/Daniels%20Wedding%5Eatlmn%60edwedwa%7Cedwedwb%7Cedwedwc%60105.00%60USD%60false%601%603/10/16%603/13/16%602/18/16&app=resvlink&stop_mobi=yes">
+                  <a class="hotel__image" href="https://aws.passkey.com/event/14194367/owner/1659924/home">
                     <img src="images/loews.jpg" alt="">
                   </a>
                   <aside class="hotel__details">
@@ -131,7 +131,7 @@
                       <p>Special Group Rate: $159/Night</p>
                       <p>To receive group rate, please ask for Evans/Daniel Wedding and book prior to February 9, 2016.</p>
                   </aside>
-                  <a class="hotel__cta" href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Evans/Daniels%20Wedding%5Eatlmn%60edwedwa%7Cedwedwb%7Cedwedwc%60105.00%60USD%60false%601%603/10/16%603/13/16%602/18/16&app=resvlink&stop_mobi=yes">Book Online</a>
+                  <a class="hotel__cta" href="https://aws.passkey.com/event/14194367/owner/1659924/home">Book Online</a>
                   <a class="hotel__cta" href="tel:4047455000">Call Hotel</a>
               </div>
             </div>
@@ -161,9 +161,11 @@
           </section>
           <footer class="container container-fullscreen">
             <div class="container__content container__enclosed">
-                <img src="images/loews.jpg" alt="">
-                <p>We can't wait for you to celebrate with us!</p>
-                <img src="images/flourish_center.svg" alt="Icon" class="end_icon">
+                <div class="end">
+                    <img src="images/richandtay3.jpg" alt="" class="end__image">
+                    <p class="end__text">We can't wait to celebrate with you!</p>
+                    <img src="images/flourish_center.svg" alt="Icon" class="end__icon">
+                </div>
             </div>
           </footer>
         </div>
