Finish story, calendar

--- a/app/index.html
+++ b/app/index.html
@@ -67,13 +67,10 @@
               <div title="Add to Calendar" class="addthisevent">
                 Add to Calendar
                 <span class="start">03/12/2016 04:30 PM</span>
-                <span class="end">03/12/2016 11:00 PM</span>
-                <span class="timezone">America/New_York</span>
+                <span class="end">03/12/2016 9:00 PM</span>
+                <span class="timezone">Eastern</span>
                 <span class="title">Taylor and Richard's Wedding</span>
-                <span class="description">Description of the event<br>Example of a new line</span>
-                <span class="location">Location of the event</span>
-                <span class="organizer">Organizer</span>
-                <span class="organizer_email">Organizer e-mail</span>
+                <span class="location">Summerour Studio, 409 Bishop St NW, Atlanta, GA 30318</span>
                 <span class="all_day_event">false</span>
                 <span class="date_format">MM/DD/YYYY</span>
             </div>
@@ -84,11 +81,11 @@
               <h2 class="headline">Our Story</h2>
               <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
               <p>This story begins in 2011 when Taylor and Richard met in a typography class at Auburn University. They soon discovered they each had family in the small town of LaGrange, where Richard grew up. Once Taylor asked her mother about the Daniel family, it only took a couple of weeks for (unfounded) rumors of their relationship to begin circulating in LaGrange.</p>
-              <p>Upon learning, much to their horror, that they were LaGrange’s next hot thing, Taylor and Richard developed an awkwardly flirtatious friendship. The seed had been planted. However, it wasn’t until the old 280 Boogie, a music festival in nearby Waverly, that any romantic gestures were exchanged (It’s still a hotly debated who held whom’s hand on that day).</p>
+              <p>Upon learning, much to their horror, that they were LaGrange’s next hot thing, Taylor and Richard developed an awkwardly flirtatious friendship. The seed had been planted. However, it wasn’t until the old 280 Boogie, a music festival in nearby Waverly, that any romantic gestures were exchanged (It’s still hotly debated who held whom’s hand on that day).</p>
               <p>Unfortunately, this event occurred no more than three weeks before Richard would depart for four-month excursion to the west coast to live in a remote canyon devoid of contact with the outside world, and almost as soon Taylor would be boarding a plane to Italy for several weeks of study (wine consumption). It seemed at the time that this hopeful yet fledgling relationship might be cut short by the untimely circumstances of each grand adventure. But, as you might have guessed, this departure would only conclude the opening chapter of their relationship.</p>
               <p>Over the next several months, the two exchanged postcards, letters, small gifts, and the occasional phone call. They stalked one another on Facebook. Their friends suffered constant allusions to the “beautiful curly-headed girl back home” and the “I-don’t-know-what-we-are-or-when-he’s-coming-back guy.” Although the sparks continued to fly, the two secretly worried that the vast distance between them could jeopardize the relationship. Nonchalant musings of Taylor visiting California suddenly turned to an impromptu plane ticket purchase the week before Taylor would return to Auburn for her final year of college.</p>
               <p>Richard’s job in King’s Canyon included taking tourists on extensive canyoneering trips, and he decided that this would be the perfect way to impress Taylor during her visit. What Taylor lacked in basic coordination she made up for in endurance and sheer will power, and so it was decided that they would tackle the most difficult 12-hour trip together. The two spent an entire day navigating the perilous canyon, rapelling down massive waterfalls, swimming through rushing white water and climbing rugged rock faces. Seizing what presented itself as a prime opportunity, Richard asked Taylor to be his girlfriend as she began her final rappel down a cliff at the end of their journey. She saw no way out of the predicament and hastily agreed.</p>
-              <p>Taylor and Richard spent the next four years growing into young professionals, moving to Birmingham and eventually Atlanta, making new friends, adopting an adorable weiner dog, all the while falling more deeply in love with each other.</p>
+              <p>Taylor and Richard spent the next four years growing into young professionals, moving to Birmingham and eventually Atlanta, making new friends, adopting an adorable weiner dog, all the while falling more deeply in love with each other. Richard knew that Taylor was the real deal, and so, on May 9th, 2015 at a favorite overlook in Oak Mountain State Park in Birmingham, he asked Taylor to marry him. She found the idea agreeable.</p>
               <img src="images/flourish_center.svg" alt="Icon" class="end__icon">
             </div>
           </section>
@@ -162,7 +159,7 @@
           <footer class="container container-fullscreen">
             <div class="container__content container__enclosed">
                 <div class="end">
-                    <img src="images/richandtay3.jpg" alt="" class="end__image">
+                    <img src="images/tayandrich-close.jpg" alt="" class="end__image">
                     <p class="end__text">We can't wait to celebrate with you!</p>
                     <img src="images/flourish_center.svg" alt="Icon" class="end__icon">
                 </div>
