--- a/app/index.html
+++ b/app/index.html
@@ -16,9 +16,13 @@
         <!-- endbower -->
         <!-- endbuild -->
 
+        <!-- Google Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Raleway:100,400' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
+        <!-- Slick Carousel -->
+        <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css"/>
+
 
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
@@ -159,7 +163,12 @@
           <footer class="container container-fullscreen">
             <div class="container__content container__enclosed">
                 <div class="end">
-                    <img src="images/tayandrich-close.jpg" alt="" class="end__image">
+                    <div class="end__carousel">
+                        <img src="images/tayandrich-close.jpg" alt="" class="end__image">
+                        <img src="images/tayandrich-proposal2.jpg" alt="" class="end__image">
+                        <img src="images/tayandrich-close.jpg" alt="" class="end__image">
+                        <img src="images/tayandrich-close.jpg" alt="" class="end__image">
+                    </div>
                     <p class="end__text">We can't wait to celebrate with you!</p>
                     <img src="images/flourish_center.svg" alt="Icon" class="end__icon">
                 </div>
@@ -191,6 +200,9 @@
             css: false,
         });
         </script>
+
+        <!-- Slick Carousel -->
+        <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/main.js"></script>
