Remove some images

--- a/app/index.html
+++ b/app/index.html
@@ -72,10 +72,10 @@
                 Add to Calendar
                 <span class="start">03/12/2016 04:30 PM</span>
                 <span class="end">03/12/2016 9:00 PM</span>
-                <span class="timezone">Eastern</span>
+                <span class="timezone">America/New_York</span>
                 <span class="title">Taylor and Richard's Wedding</span>
                 <span class="location">Summerour Studio, 409 Bishop St NW, Atlanta, GA 30318</span>
-                <span class="all_day_event">false</span>
+                <span class="all_day_event">true</span>
                 <span class="date_format">MM/DD/YYYY</span>
             </div>
             </div>
@@ -180,7 +180,6 @@
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="bower_components/jquery/jquery.js"></script>
-        <script src="bower_components/underscore/underscore-min.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -197,7 +196,7 @@
         <!-- AddThisEvent Settings -->
         <script type="text/javascript">
         addthisevent.settings({
-            css: false,
+            css: false
         });
         </script>
 
