Recover slider styles

--- a/app/index.html
+++ b/app/index.html
@@ -164,10 +164,22 @@
             <div class="container__content container__enclosed">
                 <div class="end">
                     <div class="end__carousel">
-                        <img src="images/tayandrich-close.jpg" alt="" class="end__image">
-                        <img src="images/tayandrich-proposal2.jpg" alt="" class="end__image">
-                        <img src="images/tayandrich-close.jpg" alt="" class="end__image">
-                        <img src="images/tayandrich-close.jpg" alt="" class="end__image">
+                        <img src="images/1.jpg" alt="" class="end__image">
+                        <img src="images/2.jpg" alt="" class="end__image">
+                        <img src="images/3.jpg" alt="" class="end__image">
+                        <img src="images/4.jpg" alt="" class="end__image">
+                        <img src="images/5.jpg" alt="" class="end__image">
+                        <img src="images/6.jpg" alt="" class="end__image">
+                        <img src="images/7.jpg" alt="" class="end__image">
+                        <img src="images/8.jpg" alt="" class="end__image">
+                        <img src="images/9.jpg" alt="" class="end__image">
+                        <img src="images/10.jpg" alt="" class="end__image">
+                        <img src="images/11.jpg" alt="" class="end__image">
+                        <img src="images/12.jpg" alt="" class="end__image">
+                        <img src="images/13.jpg" alt="" class="end__image">
+                        <img src="images/14.jpg" alt="" class="end__image">
+                        <img src="images/15.jpg" alt="" class="end__image">
+                        <img src="images/16.jpg" alt="" class="end__image">
                     </div>
                     <p class="end__text">We can't wait to celebrate with you!</p>
                     <img src="images/flourish_center.svg" alt="Icon" class="end__icon">
