Add details section

--- a/app/index.html
+++ b/app/index.html
@@ -95,11 +95,22 @@
             <div class="container__content">
               <h2 class="headline">Wedding Details</h2>
               <img src="images/center-arrows.svg" alt="Icon" class="section_icon">
-              <div class="coming-soon">
-                  <h3>Coming Soon</h3>
-              </div>
-              <!--
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id earum, cumque deleniti recusandae fuga quod excepturi repudiandae doloremque. Est qui nulla modi placeat, officiis ipsum! Quis voluptatem reiciendis soluta, cum.</p> -->
+              <section class="details__section">
+                  <div class="details__section--item">
+                      <h4>When</h4>
+                      <p>Saturday, March 12, 2016 <br>
+                      Five O'Clock in the Evening</p>
+                  </div>
+                  <div class="details__section--item">
+                      <h4>Where</h4>
+                      <p>Summerour Studio <br>
+                      <a href="https://www.google.com/maps/place/409+Bishop+St+NW,+Atlanta,+GA+30318/@33.793715,-84.4034674,16.58z/data=!4m2!3m1!1s0x88f504f98a550a61:0x47c7f95cd079d957">409 Bishop St NW, Atlanta, GA 30318</a></p>
+                  </div>
+                  <div class="details__section--item details__section--item">
+                      <h4>Parking</h4>
+                      <p>A complimentary valet will be provided for those who wish to drive to the ceremony. However, Taylor and Richard recommend taking an Uber from your hotel.</p>
+                  </div>
+              </section>
             </div>
           </section>
           <section class="container container-fullscreen guests" id="guests">
@@ -112,7 +123,7 @@
                   </a>
                   <aside class="hotel__details">
                       <h3>Courtyard by Marriott Atlanta Midtown</h3>
-                      <p class="hotel__details-address">1132 Techwood Drive<br>Atlanta, GA  30318<br>1-800-321-2211</p>
+                      <p class="hotel__details-address"><a href="https://www.google.com/maps/place/1132+Techwood+Dr+NW,+Atlanta,+GA+30318/@33.7855225,-84.3919676,17z/data=!4m2!3m1!1s0x88f5045ec415d615:0x5730361342d14d45">1132 Techwood Drive<br>Atlanta, GA  30318</a><br>1-800-321-2211</p>
                       <p>Special Group Rate: $105/Night</p>
                       <p>To receive group rate, please ask for Evans/Daniel Wedding and book prior to February 18, 2016.</p>
                   </aside>
@@ -126,7 +137,7 @@
                   </a>
                   <aside class="hotel__details">
                       <h3>Loews Atlanta Hotel</h3>
-                      <p class="hotel__details-address">1065 Peachtree Street NE<br>Atlanta, GA 30309<br>1-404-745-5000</p>
+                      <p class="hotel__details-address"><a href="https://www.google.com/maps/place/Loews+Atlanta+Hotel/@33.7830284,-84.3833749,17z/data=!4m2!3m1!1s0x88f504430249f75b:0x8aa4c21acf9cc9f1">1065 Peachtree Street NE<br>Atlanta, GA 30309</a><br>1-404-745-5000</p>
                       <p>Special Group Rate: $159/Night</p>
                       <p>To receive group rate, please ask for Evans/Daniel Wedding and book prior to February 9, 2016.</p>
                   </aside>
